assets/_sass/components/left-nav/_navbar.scss
$nav-item-border: darken($navbar-default-bg, 8%);

@mixin menu-levels-pad($count, $darken) {
  @for $i from 0 through $count {
    &.level-#{$i + 1} {
      padding-left: calc(#{$i} * 15px + 25px);
    }
  }
}

@mixin bg-gradient($color) {
  @include gradient-vertical-three-colors(
    lighten($color, 15%),
    $color,
    50%,
    darken($color, 4%)
  );

  filter: none;
  border: 1px solid darken($color, 10%);
}

#resizer {
  display: none;
  cursor: col-resize;
  flex-basis: 3px;
  position: relative;
  border-left: 0 solid $border;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: cubic-bezier(0.215, 0.61, 0.355, 1) 0.3s;

  @media (min-width: $grid-float-breakpoint) {
    &:hover {
      border-left: 1px solid $border;
    }
  }
}

#presidium-navigation {
  background: white;
  min-width: 300px;
  max-width: 600px;
  z-index: $zindex-navbar;
  position: sticky;
  border-right: 0.5px solid $color-grey-3;
  top: 0;
  height: 100vh;
  display: flex;

  @media (max-width: $grid-float-breakpoint) {
    width: 300px;
    max-width: unset;

    &.expanded {
      position: fixed;

      .navbar {
        background: white;
        overflow-x: hidden;
      }
    }

    &:not(.expanded) {
      display: flex;
      height: 0;
      width: 0;
      min-width: unset;
      flex-basis: 0 !important;

      .navbar-items,
      .navbar-footer {
        display: none;
      }

      nav .navbar-header {
        padding-left: 0;

        .brand,
        .brand-name-grid {
          display: none;
        }
      }
    }
  }

  .navbar {
    margin: 0;
    display: flex;
    flex-direction: column;
    overflow-y: hidden;
    width: 100%;
  }

  .navbar-nav {
    margin: 7.5px 0;

    .menu-row {
      background-color: transparent;

      &:not(.open):hover {
        background-color: $gray-lighter;
      }

      &.open {
        > .link > a {
          color: $brand-primary;

          .glyphicon {
            color: $color-grey;
          }
        }
      }
    }
  }

  nav {
    @media (min-width: $grid-float-breakpoint) {
      overflow: auto;
      border: 0;
      border-radius: 0;
      margin-bottom: 150px;
    }

    .navbar-header {
      float: none;
      width: 100%;
      flex-shrink: 0;
      text-align: center;
      padding: 12px 20px 0;

      .brand {
        justify-content: center;
        display: flex;
        margin-bottom: 8px;

        img {
          max-width: 260px;
          max-height: 87px;
        }
      }

      select#versions-select {
        background: none;
        border: none;
        box-shadow: none;
        appearance: none;
        appearance: none;
        width: auto;
        margin-top: -10px;

        &:hover {
          color: $navbar-default-link-hover-color;
          text-decoration: none;
          cursor: pointer;
        }
      }

      .versions-filter {
        display: inline-block;
        border: none;
        margin-bottom: 0;
      }

      .brand-name-grid {
        display: flex;
        justify-content: space-between;
        align-items: center;
        grid-template-columns: unset;
        flex-direction: column;

        .brand-name {
          color: $color-dark-grey;
          width: 100%;
          margin: 0;
        }

        .quality-category-labels {
          color: $color-grey-2;
          width: fit-content;
        }
      }
    }

    div.navbar-items {
      width: 100%;
      margin-left: 0;
      margin-right: 0;
      flex-grow: 1;
      padding: 0 8px;
      word-break: break-all;
      overflow-wrap: anywhere;
      hyphens: auto;
      overflow-y: auto;

      span.glyphicon {
        padding: 4px;
        -webkit-text-stroke: 1px $navbar-default-bg;
        line-height: 0.6;

        &:hover {
          background-color: #e2e2e2;
          border-radius: 4px;
          -webkit-text-stroke: 1px #e2e2e2;
        }
      }

      > ul:first-of-type {
        border-top: 1px solid $nav-item-border;
      }
    }

    .dropdown {
      margin: 0;
      display: none;

      &.expanded {
        display: inherit;
      }
    }

    div {
      ul {
        list-style: none;
        padding-left: 0;
        float: none;

        li {
          cursor: pointer;
          float: none;
          position: relative;
          display: block;
          font-weight: 600;

          &.hidden {
            display: none;
          }
        }
      }
    }

    &.menu-row:not(:has(.collapse)) {
      > .link > a {
        padding-left: 30px;

        .menu-title {
          padding-left: 5px;
        }
      }
    }

    .menu-row {
      a {
        display: flex;
        padding: 4px 8px;
        color: $color-grey;
        flex-grow: 1;
        text-decoration: none;

        @include menu-levels-pad(6, 5%);
      }

      .link {
        display: flex;

        text-decoration: none;
        flex-grow: 1;

        &:hover > .article-navbar-options {
          .add-icon,
          .delete-icon {
            visibility: visible;
          }
        }

        &.level-1 {
          padding-left: 0;
        }

        &[class^="level-"]:has(+ ul) {
          padding-left: 20px;
        }

        &[class^="level-"]:has(a > .menu-expander) {
          padding-left: 20px;
        }

        &[class^="level-"]:has(a > div:not(.menu-title)) {
          padding-left: 0;
        }

        .article-navbar-options {
          margin: auto 5px auto auto;

          .option-button {
            visibility: hidden;
            width: 22px;
            height: 22px;
            background-color: transparent;
            transition: background-color 0.05s;
            border-radius: 3px;
            background-size: 12px 12px;
            background-repeat: no-repeat;
            background-position: center;

            &:hover {
              background-color: #e2e2e2;
            }

            &:active {
              background-color: #ababab;
            }
          }

          .add-icon {
            @extend .option-button;

            background-image: url("assets/svg/plus.svg");
          }

          .delete-icon {
            @extend .option-button;

            background-image: url("assets/svg/trash.svg");
          }
        }
      }

      a > div {
        padding-left: 5px;
      }

      &.active,
      .active {
        &.child {
          background-color: $gray-lighter;
        }

        &.child > div > a,
        &.closed > div > a {
          background-color: $gray-lighter;

          span {
            -webkit-text-stroke: $gray-lighter;
          }
        }
      }

      .menu-expander {
        margin-left: -33px;

        .glyphicon {
          margin-left: 5px;
        }
      }

      .menu-title {
        max-width: calc(100% - 5px);
        flex: 1;
        word-break: normal;
        text-overflow: ellipsis;
        overflow: hidden;

        a {
          color: $navbar-default-link-color;
        }
      }
    }
  }

  .navbar-footer {
    background-color: unset;
    flex-shrink: 0;
  }
}

